--- a/git r.html
+++ b/git r.html
@@ -11,15 +11,11 @@
         <div class="container">
 <img src="http://nick.mtvnimages.com/nick/promos-thumbs/games/coding-kickoff/multi/multi-coding-kickoff-1x1.jpg?quality=0.51&maxdimension=600">
 
-<a href="music.html">Click here to see what music is</a>
-<a href="hello-world.html">Click me to see about gaming and web design </a>
-<a href=""></a>
-
-
-
-
-
-
+<p><a href="hello-world.html">Click here for game and web design</a></p>
+<p><a href="music.html">Click to read about music</a></p>
+<p><a href="photo1.html">Click here to read about photography</a></p>
+<a href="Dance.html">Click here to see top 5 most popular dance styles</a>
+<a href="Scholar.html">Click here to see more info about Scholarships!</a>
 </div>
     </body>
 </html>
