--- a/music.html
+++ b/music.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-        <link rel="stylesheet" href="Untitled1.css" type="text/css"/>
+        <link rel="stylesheet" href="Music.css" type="text/css"/>
         <title>Google project</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
